--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run ng-v9-universal:serve-ssr",
+    "serve:ssr": "node dist/ng-v9-universal/server/main.js",
+    "build:ssr": "ng build --prod && ng run ng-v9-universal:server:production",
+    "prerender": "ng run ng-v9-universal:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +22,10 @@
     "@angular/forms": "~9.0.0-rc.7",
     "@angular/platform-browser": "~9.0.0-rc.7",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.7",
+    "@angular/platform-server": "~9.0.0-rc.7",
     "@angular/router": "~9.0.0-rc.7",
+    "@nguniversal/express-engine": "^9.0.0-rc.0",
+    "express": "^4.15.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -28,9 +35,11 @@
     "@angular/cli": "~9.0.0-rc.7",
     "@angular/compiler-cli": "~9.0.0-rc.7",
     "@angular/language-service": "~9.0.0-rc.7",
-    "@types/node": "^12.11.1",
+    "@nguniversal/builders": "^9.0.0-rc.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -42,6 +51,7 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.6.4"
+    "typescript": "~3.6.4",
+    "xhr2": "^0.2.0"
   }
 }
