--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "~9.0.0-rc.7",
     "@angular/router": "~9.0.0-rc.7",
     "@nguniversal/express-engine": "^9.0.0-rc.0",
+    "@nguniversal/module-map-ngfactory-loader": "9.0.0-next.9",
     "express": "^4.15.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
@@ -51,7 +52,6 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.6.4",
-    "xhr2": "^0.2.0"
+    "typescript": "~3.6.4"
   }
 }
