--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-v9-universal:build"
+            "browserTarget": "ng-v9-universal:build",
+            "port": "4300"
           },
           "configurations": {
             "production": {
