--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:ssr": "ng run ng-v9-universal:serve-ssr",
     "serve:ssr": "node dist/ng-v9-universal/server/main.js",
     "build:ssr": "ng build --prod && ng run ng-v9-universal:server:production",
-    "prerender": "ng run ng-v9-universal:prerender"
+    "list-routes": "node ./scripts/list-routes.js",
+    "prerender": "npm run list-routes && ng run ng-v9-universal:prerender --routesFile routes.txt"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +41,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "axios": "^0.19.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
